login works across the app, profile page synced up to the user logged in session, alignment needs to be fixed, database now creates a new user in the table for every authenticated sign up

--- a/dormify-react/src/App.css
+++ b/dormify-react/src/App.css
@@ -2,6 +2,9 @@ h1{
     text-align: center;
     color: #4248D1;
 }
+h5{
+    color: #4248D1;
+}
 body{
     font-family: sans-serif;
 }
@@ -12,20 +15,6 @@ body{
     width:150px;
     height:40px;
 }
-
-.user-pic-header{
-    width: 40px;
-    height: 40px;
-}
-.user-pic-button{
-    background: #F8FCFF;
-    border: none;
-    overflow: hidden;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 10px;
-}
-.user-pic-button:hover{
-    background: #d9dcdf;
+.logo:hover{
+    cursor: pointer;
 }
